👌 IMPROVE: Added custom JVM configuration to the gradle
resolved #43